# rogets-thesaurus

./: LICENSE  README.md  pyproject.toml
