[tool.poetry]
name = "rogets-thesaurus-assignment"
version = "0.1.0"
description = ""
authors = ["kwstaseL <kostasel19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
gensim = "^4.3.2"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
pandas = "^2.2.0"
seaborn = "^0.13.2"
matplotlib = "^3.8.2"
nltk = "^3.8.1"
scikit-learn = "^1.4.0"
yellowbrick = "^1.5"
langdetect = "^1.0.9"
scipy = "^1.12.0"
pyenchant = "^3.2.2"
tensorflow = "^2.15.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
